# coldfront-website

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
content/: CNAME  about.md  community.md  index.md
content/assets/: custom_extra.css
content/docs/: .pages
content/news/posts/: 2025-05-cc.md  2025-06-cc.md  2025-07-cc.md  2025-07-pearc.md  2025-08-cc.md  2025-09-cc.md  2025-09-pose.md  2025-09-working-groups.md  2025-10-cc.md  2025-11-cc.md  2025-11-sc25.md  2025-12-cc.md
overrides/: main.html
pages/: community.md  index.md
pages/assets/: custom_extra.css
pages/news/: .authors.yml
pages/news/posts/: 2025-05-cc.md  2025-06-cc.md
