[project]
name = "coldfront-website"
version = "0.0.1"
requires-python = ">=3.12"
authors = [
    { name = "Andrew E. Bruno" },
    { name = "Dori Sajdak" },
]
description = "HPC Resource Allocation System"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "pygments",
    "mkdocs-bootswatch",
    "pymdown-extensions",
    "fontawesome-markdown>=0.2.6",
    "mkdocs-video>=1.5.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/ubccr/coldfront/issues"
Changelog = "https://github.com/ubccr/coldfront/blob/main/CHANGELOG.md"
Documentation = "https://docs.coldfront.dev"
"Source Code" = "https://github.com/ubccr/coldfront"
